# SimpleRPG

./: .env  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  binding.gyp  build_log.txt  compile_flags.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
build_scripts/: build-core-nodejs.js  build-core.js
core/: app.cpp  core.cpp
core/headers/game/: chunk.h  constants.h  game-core.h  game-object-physics.h  game-object.h  game-world.h  inventory.h  physics-system.h  test-spawns.h  tile-registry.h  transform.h  world.h
core/headers/math/: aabb.h  number.h  point.h  rect.h
core/src/game/: game-core.cpp  game-object-physics.cpp  game-world.cpp  inventory.cpp  physics-system.cpp  test-spawns.cpp  tile-registry.cpp  world.cpp
core/src/math/: aabb.cpp  point.cpp  rect.cpp
server/: .env  index.js  package-lock.json  package.json
server/src/: index.ts
src/: App.tsx  GameScene.tsx  UI.tsx  index.scss  main.tsx  vite-env.d.ts
src/assets/: entities_registry.json  sprites_data.json  tiles_registry.json
src/components/button/: index.tsx
src/components/game_internal_state/: index.tsx  ping_display.tsx
src/components/overlay/: index.tsx
src/components/positions/: absolute.tsx
src/defines/: key.enum.ts  key_library.ts
src/defines/core/: index.d.ts
src/extensions/: array.ts  index.ts
src/modules/game_module/: game_state.ts
src/modules/game_module/shaders/: fragment.glsl  index.ts  tileFragment.glsl  tileVertex.glsl  vertex.glsl
src/modules/game_module/utils/: AssetManager.ts  RegistryManager.ts  SpriteSystem.ts  TileDataManager.ts  webGLUtils.ts
src/modules/map_module/: index.ts
src/modules/map_module/workers/: RenderWorker.ts  (+1 more)
src/modules/menu_module/: index.ts
src/modules/ui_module/: App.tsx  index.ts
src/services/: game.service.ts  keyboard.service.ts
src/services/components/: PrimeReactProviderServiceComponent.tsx
src/services/import-modules/: game-core.service.ts  import.service.ts
src/store/: index.ts
src/store/hooks/: useAppDispatch.ts
src/store/slices/: index.ts  menu.slice.ts  ui.slice.ts
(+11 files in other folders)
